// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Auth login: renders correctly 1`] = `
<div
  className="login-signup-body"
>
  <div
    className="container"
    id="login-signup-container"
  >
    <Row
      className="my-5"
      id="login-signup-wrapper"
      tag="div"
    >
      <Col
        className="p-xs-2 p-lg-4"
        id="login-signup-div"
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Connect(Form)
          dispatch={[Function]}
          isAuthenticated={false}
          location={
            Object {
              "pathname": "/login",
              "state": Object {
                "from": Object {
                  "pathname": "/",
                },
              },
            }
          }
          meta={
            Object {
              "btnText": "SIGN IN",
              "extra": <p
                className="text-center"
              >
                Dont have an account, 
                <Link
                  replace={false}
                  to="/signup"
                >
                  Sign up here
                </Link>
                .
              </p>,
              "title": "Sign In to Your Account",
            }
          }
          submitError={null}
          submitting={false}
          type="login"
        />
      </Col>
    </Row>
  </div>
</div>
`;

exports[`Auth redirects when authenticated 1`] = `
<Redirect
  push={false}
  to={
    Object {
      "pathname": "/",
    }
  }
/>
`;

exports[`Auth redirects when authenticated: stateless location 1`] = `
<Redirect
  push={false}
  to={
    Object {
      "pathname": "/",
    }
  }
/>
`;

exports[`Auth signup: renders correctly 1`] = `
<div
  className="login-signup-body"
>
  <div
    className="container"
    id="login-signup-container"
  >
    <Row
      className="my-5"
      id="login-signup-wrapper"
      tag="div"
    >
      <Col
        className="p-xs-2 p-lg-4"
        id="login-signup-div"
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Connect(Form)
          dispatch={[Function]}
          isAuthenticated={false}
          location={
            Object {
              "pathname": "/signup",
              "state": Object {
                "from": Object {
                  "pathname": "/",
                },
              },
            }
          }
          meta={
            Object {
              "btnText": "SIGN UP",
              "extra": <p
                className="text-center"
              >
                Already have an account, 
                <Link
                  replace={false}
                  to="/login"
                >
                  Log in here
                </Link>
                .
              </p>,
              "title": "Register for a New Account",
            }
          }
          submitError={null}
          submitting={false}
          type="signup"
        />
      </Col>
    </Row>
  </div>
</div>
`;
